--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,9 @@
   body {
     @apply bg-pink-200;
   }
+}
+
+@layer components {
   .card {
     @apply p-6 backdrop-blur-2xl bg-rose-300 border border-white flex flex-col rounded-md gap-3 mb-8;
   }
